# issue

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rustroverdebugissue/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dummy.cpp
app/src/main/cpp/rust/: Cargo.toml
app/src/main/cpp/rust/src/: lib.rs
app/src/main/java/com/example/rustroverdebugissue/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/rustroverdebugissue/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
